# cosc345

./: .gitignore  CMakeLists.txt  Doxyfile  Notes.md  README.md  _basic_player_8cpp.html  _basic_player_8cpp__dep__incl.dot  _basic_player_8cpp__incl.dot  _basic_player_8cpp_source.html  _better_player_012_8cpp.html  _better_player_012_8cpp__incl.dot  _better_player_012_8cpp_source.html  _better_player_8cpp.html  _better_player_8cpp__dep__incl.dot  _better_player_8cpp__incl.dot  _better_player_8cpp_source.html  _c_s_v_worker_8cpp.html  _c_s_v_worker_8cpp__incl.dot  _c_s_v_worker_8cpp_source.html  _c_s_v_worker_8hpp.html  _c_s_v_worker_8hpp__dep__incl.dot  _c_s_v_worker_8hpp__incl.dot  _c_s_v_worker_8hpp_source.html  _card_8cpp.html  _card_8cpp__incl.dot  _card_8cpp__incl.map  _card_8cpp__incl.md5  _card_8cpp_source.html  _card_8hpp.html  _card_8hpp__dep__incl.dot  _card_8hpp__dep__incl.map  _card_8hpp__dep__incl.md5  _card_8hpp__incl.dot  _card_8hpp__incl.map  _card_8hpp__incl.md5  _card_8hpp_source.html  _deck_8cpp.html  _deck_8cpp__incl.dot  _deck_8cpp__incl.map  _deck_8cpp__incl.md5  (+1015 more)
.github/: codacy-coverage.yml
.github/workflows/: build-and-release-windows.yml  cmake-single-platform.yml  codacy-coverage.yml  codecov.yml  doxygen-gh-pages.yml
_docs/: Assignment01.md  Assignment01.tex
data/: profiles.csv
docs/html/: _card_8cpp.html  _card_8cpp_source.html  _card_8hpp.html  _card_8hpp__dep__incl.dot  _card_8hpp_source.html  _deck_8cpp.html  _deck_8cpp__incl.dot  _deck_8cpp_source.html  _deck_8hpp.html  _deck_8hpp__dep__incl.dot  _deck_8hpp__incl.dot  _deck_8hpp_source.html  _equity_calculator_8cpp.html  _equity_calculator_8cpp__incl.dot  _equity_calculator_8cpp_source.html  _equity_calculator_8hpp.html  _equity_calculator_8hpp__dep__incl.dot  _equity_calculator_8hpp__incl.dot  _equity_calculator_8hpp_source.html  _g_u_i_8cpp.html  _g_u_i_8cpp__incl.dot  _g_u_i_8cpp_a36b6f63142ee7d9e884ef846d5dd1a05_cgraph.dot  _g_u_i_8cpp_source.html  (+214 more)
doxygen/: _g_u_i_8hpp_source.html  _game_8hpp_source.html  _player_8hpp_source.html  annotated.html  class_card.html  class_g_u_i.html  class_hand_evaluator.html  class_human_player.html  class_player-members.html  class_player.html  class_random_player.html  dir_000000_000001.html  dir_3dd772675f6e1d4d41b28892c61dd9af.html  functions_func.html  md_tests__r_e_a_d_m_e.html
html/: _g_u_i_8hpp_source.html  _game_8hpp_source.html  _player_8hpp_source.html  annotated.html  class_g_u_i-members.html  class_g_u_i.html  class_player-members.html  class_player.html  class_test_player.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_16280b94ec18e6f0e1f1d824982fb61b.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_99ca08041bcf71452536e32a48331660.html  dir_dfb65fcabc8b5cc6b277384027dca825.html  dir_e6589260adfbb0fe1d0a90d02a1b0271.html  doxygen_crawl.html  files.html  md__r_e_a_d_m_e.html  md_tests_2_r_e_a_d_m_e.html
images/: ClubsCard.txt  DiamondsCard.txt  HeartsCard.txt  SpadesCard.txt  adjectives.txt  animals.txt  backCard.txt  button.txt  cardAnimation.txt  pokerTutorial.txt  spadeCard.txt  table.txt
latex/: _g_u_i_8hpp_source.tex  _game_8hpp_source.tex  _player_8hpp_source.tex  annotated.tex  class_equity_calculator.tex  class_g_u_i.tex  class_game.tex  class_player.tex  files.tex  md__r_e_a_d_m_e.tex  refman.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_c.js  defines_0.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_0.js  (+63 more)
src/: BasicPlayer.cpp  BetterPlayer 2.cpp  BetterPlayer.cpp  CSVWorker.cpp  CSVWorker.hpp  Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  EquityCalculator.cpp  EquityCalculator.hpp  GUI.cpp  GUI.hpp  Game.cpp  Game.hpp  HandEvaluator.cpp  HandEvaluator.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Player.cpp  Player.hpp  PlayerProfile.hpp  PokerGame.cpp  RandomPlayer.cpp  RandomPlayer.hpp
tests/: MockGUI.hpp  README.md  test_Card.cc  test_Card.cpp  test_Deck.cc  test_Deck.cpp  test_EquityCalculator.cc  test_GUI.cc  test_Game.cc  test_Game.cpp  test_HandEvaluator.cc  test_HumanPlayer.cc  test_Player.cc  test_Player.cpp  test_RandomPlayer.cc
(+90 files in other folders)
